@startuml

title __AMCWardPanels.TableFrames.Incoming Package Diagram__\n


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Incoming {
          class AMCWardPanels.TableFrames.Incoming.InTable {
              + InTable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Incoming {
          class AMCWardPanels.TableFrames.Incoming.InTableModel {
              + InTableModel()
              + InTableModel()
              + isCellEditable()
          }
        }
      }
    }

  

    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Incoming {
          class AMCWardPanels.TableFrames.Incoming.InTablePanel {
              - AMCorLS : String
              - amcColumnName : String[]
              - dbData : Object[][]
              - lsColumnName : String[]
              - scrollPane : JScrollPane
              - table : JTable
              + InTablePanel()
              + dateFormatter()
              + getAMCorLS()
              + setupTable()
              + tableChanged()
              - editPatient()
              - selectBed()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Incoming {
          class AMCWardPanels.TableFrames.Incoming.LongInTableModel {
              + LongInTableModel()
              + LongInTableModel()
              + isCellEditable()
          }
        }
      }
    }

  

  AMCWardPanels.TableFrames.Incoming.InTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Incoming.InTablePanel .up.|> javax.swing.event.TableModelListener
  AMCWardPanels.TableFrames.Incoming.InTablePanel -up-|> javax.swing.JPanel
  AMCWardPanels.TableFrames.Incoming.InTablePanel o-- Methods.GeneralWard
  AMCWardPanels.TableFrames.Incoming.InTablePanel o-- AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Incoming.LongInTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
